--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.9.13",
+    "@livekit/components-styles": "^1.1.6",
     "formik": "^2.4.6",
+    "livekit-client": "^2.15.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
